--- a/src/App.css
+++ b/src/App.css
@@ -19,12 +19,12 @@
 
 a{
   text-decoration: none;
+  color: #323232;
 }
 
-@font-face{
-    font-family: Acme;
-    src: url('../src/assets/fonts/Acme-Regular.ttf');
-  }
+hr{
+  border-top: 0.7rem solid #eb3333;
+}
 
 
 /* Colores de fondo y textos */
@@ -177,10 +177,34 @@ a{
   justify-content: center;
 }
 
+/* CSS cards home */
 .title-acme {
-    font-family: "Acme";
+    font-family: "Acme", sans-serif;
 }
 
 .img {
   height: 12rem;
+}
+
+
+
+/* CSS del menu profile */
+
+.textProfileTitle {
+  font-family: 'Acme', sans-serif;
+  text-align: center;
+  font-size: 2.3rem;
+  font-weight: 500;
+}
+
+.textProfile{
+  font-size: 1.3rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+#titleProfile{
+  font-size: 2rem;
+  text-decoration: underline;
+  font-weight: 600;
 }
