--- a/src/App.css
+++ b/src/App.css
@@ -285,6 +285,7 @@ hr{
 
  .cardMyProducts {
   min-height: 10rem;
+  margin: 1rem;
  }
 
  /*Edit Post*/
@@ -299,4 +300,17 @@ hr{
   color: #323232;
   border: #9BE8F5;
 }
+
+/*CSS orders*/
+
+.ordersImg {
+  width: 5rem;
+}
+
+.verMasButton {
+    background-color: #f8d589;
+    color: #323232;
+    border:#f8d589 solid 2px;
+  }
+
 
