variables inglés order Detail

--- a/src/App.css
+++ b/src/App.css
@@ -307,7 +307,7 @@ hr{
   width: 5rem;
 }
 
-.verMasButton {
+.orderListButton {
     background-color: #f8d589;
     color: #323232;
     border:#f8d589 solid 2px;
