--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,10 @@
 }
 
 :root {
-  --yellowColor: #FAE5B8;
-  --redColor:  #ED9C9C;
+  --yellowColor: #f8dea4;
+  --redColor: #ED9C9C;
   --skyBlue:#9BE8F5;
-  --whiteColor:rgb(255, 255, 255);
+  --whiteColor:#ffffff;
   --greenColor:#249F3F;
   --blackColor:#323232;
 }
@@ -31,22 +31,22 @@
 
 a{
   text-decoration: none;
-  color: #323232;
+  color: var(--blackColor);
 }
 
 hr{
-  border-top: 0.3rem solid #249F3F;
+  border-top: 0.3rem solid var(--greenColor);
 }
 
 
 
 /* Colores de fondo y textos */
 .skyBlue {
-  background-color: #9BE8F5;
+  background-color: var(--skyBlue);
 }
 
 .redColor {
-  background-color: #ED9C9C;
+  background-color: var(--redColor);
 }
 
 .yellowColor {
@@ -62,11 +62,11 @@ hr{
 }
 
 .whiteColor {
-  background-color: rgb(255, 255, 255);
+  background-color: var(--whiteColor);
 }
 
 .greenColor{
-  background-color: #249F3F;
+  background-color: var(--greenColor);
 }
 
 
@@ -80,12 +80,14 @@ hr{
  .textConfig{
   font-size: 1.3rem;
   font-weight: 500;
+  color: var(--blackColor);
 }
  .backHover{
   border-radius: 5px;
+  color: var(--blackColor);
 }
 .backHover:hover{
-  background-color: #323232;
+  background-color: var(--blackColor);
   color: var(--whiteColor) !important;
 }
 
@@ -99,6 +101,9 @@ hr{
   color: var(--whiteColor);
 }
 
+#cardDetail .title-acme{
+  text-decoration: underline;
+}
 
 /* CSS del header */
 
@@ -142,6 +147,7 @@ hr{
 .titleConfig{
   font-size: 1.4rem;
   font-family: 'MedievalSharp', sans-serif !important;
+  color: var(--blackColor);
 
 }
 .footer .titleConfig{
@@ -153,14 +159,14 @@ hr{
 }
 
 .footerTextSocialContact{
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 /* CSS de formulario register y login */
 
 
 .registerLoginColor{
-  border: #ED9C9C solid 2px;
+  border: var(--redColor) solid 2px;
   width: 20rem;
 }
 
@@ -198,6 +204,10 @@ hr{
   color: var(--blackColor);
 }
 
+.form-label{
+  font-weight: 600;
+}
+
 /* CSS del home */
 .searchOrderBy{
   border:var(--greenColor) solid 2px;
@@ -206,6 +216,7 @@ hr{
 #filters .filterText{
   font-size: 2rem;
   font-family: 'Acme',sans-serif;
+  color: var(--blackColor);
 }
 
  #filters .categoryText{
@@ -231,13 +242,18 @@ hr{
 #filters .form-check{
   font-weight: 600;
   font-size: 1.05rem;
+  color: var(--blackColor);
 }
 
 #filters .form-label{
   font-weight: 600;
   font-size: 1.05rem;
+  color: var(--blackColor);
 }
 
+.searchButtonHome{
+  background-color: var(--greenColor);
+}
 
 /* CSS cards home */
 .title-acme {
@@ -261,7 +277,7 @@ hr{
 
 .active .page-link{
   background:var(--skyBlue);
-  color:#323232;
+  color:var(--blackColor);;
 }
 
 /* CSS Products */
@@ -270,25 +286,31 @@ hr{
 }
 
 .addCartButton {
-    background-color:#f8d589;
-    color: #323232;
-    border: #f8d589;
-    font-weight: 500;
-  }
+  background-color:var(--yellowColor);
+  color:var(--blackColor);
+  font-weight: 600;
+  border: var(--yellowColor);
+}
 
 .goDetails{
-  background-color:#9BE8F5;
-  color: #323232;
-  border: #9BE8F5;
-  font-weight: 500;
+  background-color:var(--skyBlue);
+  color: var(--blackColor);
+  border: var(--skyBlue);
+  font-weight: 600;
 }
 
 #cardProduct .priceText{
-  color:#249F3F !important;
+  color:var(--greenColor) !important;
   font-size: 1.3rem;
   font-weight: 600;
 }
 
+.addCartButton {
+  background-color:var(--yellowColor);
+  color:var(--blackColor);
+  border: var(--yellowColor);
+  font-weight: 600;
+}
 
 /* CSS del menu profile */
 
@@ -303,12 +325,12 @@ hr{
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
-  color: #323232;
+  color: var(--blackColor);
 }
 
 .textProfile:hover{
   background-color:#f8d589;
-  color: #323232;
+  color: var(--blackColor);
   border-radius: 10px;
   
 }
@@ -318,6 +340,7 @@ hr{
   font-size: 2rem;
   text-decoration: underline;
   font-weight: 600;
+  color: var(--blackColor);
 }
 
 .profileLink{
@@ -325,7 +348,7 @@ hr{
 }
 
 .adressColor{
-  border: #ED9C9C solid 2px;
+  border: var(--redColor) solid 2px;
   width: 100%;
 }
 
@@ -336,14 +359,20 @@ hr{
 
 /* CSS Nuevo producto */
 .newPostColor{
-  border: #ED9C9C solid 2px;
+  border: var(--redColor) solid 2px;
   width: 100%;
 }
 
 .textareaColor{
-  border: #ED9C9C solid 2px;
+  border: var(--redColor) solid 2px;
   width: 100%;
   height: 100% !important;
+}
+
+.searchButton{
+  background-color: var(--skyBlue);
+  color: var(--blackColor);
+  border: var(--skyBlue);
 }
 
 /* CSS NotFound */
@@ -369,30 +398,22 @@ hr{
   border:#f8d589 solid 2px;
 }
 
-.addCartButton {
-    background-color: #9BE8F5;
-    color: #323232;
-    border: #9BE8F5;
-  }
-
-
-
 .imgCart{
   width: 4rem;
   height: 4rem;
 }
 
 .cartProductPrice{
-  color:#249F3F;
+  color:var(--greenColor);
   font-size: 1.2rem;
   font-weight: 300;
   font-family: 'Acme',sans-serif;
 }
 
 .buttonErase{
-  background-color: #ED9C9C;
-  border: #ED9C9C;
-  color: #323232;
+  background-color: var(--redColor);
+  border: var(--redColor);
+  color: var(--blackColor);
   font-weight: 600;
 }
 
@@ -408,45 +429,48 @@ hr{
 /* CSS del carrito order */
 
 #cartFinalOrder{
-  border: #ED9C9C 2px solid; 
+  border: var(--redColor) 2px solid; 
 }
 
 .cartOrderTitle{
   font-family: 'Acme', sans-serif;
   text-decoration: underline;
   font-size: 1.1rem;
-  color: #323232;
+  color: var(--blackColor);
 }
 
 #cartFinalOrder .button{
   background-color: #f8d589;
-  color: #323232;
+  color: var(--blackColor);
   border:#f8d589;
 }
 
 .cuponInput{
-  border:#9BE8F5 solid 1px;
+  border:var(--skyBlue) solid 1px;
 }
 
 .cartOrderSub{
   font-size: 0.8rem;
-  color: #323232;
+  color: var(--blackColor);
 }
 
 #cartFinalOrder .hr{
-  border:#323232 3px dotted;
+  border:var(--blackColor) 3px dotted;
   border-style: none none dotted; 
 }
 .cartOrderTotal{
   font-size: 1.2;
   font-weight: 700;
-  color: #323232;
+  color: var(--blackColor);
 }
 .buttonCheckout{
-  background-color: #9BE8F5;
-  border: #9BE8F5;
-  color: #323232;
+  background-color: var(--skyBlue);
+  border: var(--skyBlue);
+  color: var(--blackColor);
   font-weight: 700;
+}
+.form-control.inputCart{
+  border: var(--skyBlue) 1px solid;
 }
 
 /* CSS My Products  */
@@ -454,25 +478,30 @@ hr{
  .imgMyProducts {
   height: 8rem;
   width: 8rem;
-
  }
 
  .cardMyProducts {
   min-height: 10rem;
-  margin: 1rem;
+  border: var(--redColor) 2px solid;
+ }
+
+ .editProductsButton{
+  background-color: var(--yellowColor);
+  border: var(--yellowColor);
+  color: var(--blackColor);
  }
 
  /*Edit Post*/
 .editPostColor {
-  border: #ED9C9C solid 2px;
+  border: var(--redColor) solid 2px;
   
 }
 
 .editButton {
   width: 20rem;
-  background-color: #9BE8F5;
-  color: #323232;
-  border: #9BE8F5;
+  background-color: var(--skyBlue);
+  color: var(--blackColor);
+  border: var(--skyBlue);
 }
 
 /*CSS orders*/
@@ -482,9 +511,17 @@ hr{
 }
 
 .orderListButton {
-    background-color: #f8d589;
-    color: #323232;
-    border:#f8d589 solid 2px;
+    background-color: var(--yellowColor);
+    color: var(--blackColor);
+    border:var(--yellowColor) solid 2px;
   }
 
+.totalPriceOrder{
+  color: var(--greenColor);
+}
 
+.seeMore {
+  background-color: var(--skyBlue);
+  color: var(--blackColor);
+  border: var(--skyBlue);
+}
